--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,3 +1,6 @@
 name = "my-worker"
 main = "index.html"
 compatibility_date = "2023-03-12"
+rules = [
+  { type = "Text", globs = ["**/*.html"], fallthrough = true }
+]
