--- a/wrangler.toml
+++ b/wrangler.toml
@@ -3,6 +3,6 @@ main = "index.html"
 workers_dev = true
 compatibility_date = "2023-03-12"
 type="Text"
-
+TargetType="javascript"
 [build]
 command = "npm ci && npm run build"
