--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,17 +1,18 @@
-name: Build with cloudflare workflows
+name: Build
 on:
   push:
   pull_request:
   repository_dispatch:
 jobs:
   deploy:
+    name: Deploy
     runs-on: ubuntu-latest
     timeout-minutes: 60
     needs: test
     steps:
       - uses: actions/checkout@v2
       - name: Publish
-        uses: cloudflare/wrangler-action@1.3.0
+        uses: cloudflare/wrangler-action@2.0.0
 	      with:
           apiToken: ${{ secrets.CF_API_TOKEN }}
 	      env:
