--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "lite-server -c bs-config.js",
-    "build": "mkdir dist && cp src/index.html dist/index.html",
+    "build": "rm -rf dist && mkdir dist && cp src/* dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
